force-app/main/default/objects/amorgan__FunnelAction__c/amorgan__FunnelAction__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>FunnelAction settings for FunnelSource.</description>
    <label>FunnelAction</label>
</CustomObject>