force-app/main/default/objects/amorgan__FunnelAction__c/fields/amorgan__Gauge__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Gauge__c</fullName>
    <label>Gauge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>