force-app/main/default/objects/amorgan__FunnelAction__c/fields/amorgan__GoalSheet__c.field-meta.xml
<CustomField>
    <fullName>amorgan__GoalSheet__c</fullName>
    <label>GoalSheet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>