force-app/main/default/objects/amorgan__FunnelAction__c/fields/amorgan__Race__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Race__c</fullName>
    <label>Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>