force-app/main/default/objects/amorgan__FunnelAction__c/fields/amorgan__Role__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>