force-app/main/default/objects/amorgan__FunnelAction__c/fields/amorgan__StartDate__c.field-meta.xml
<CustomField>
    <fullName>amorgan__StartDate__c</fullName>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>